Library/AXL(Library)/Visual Basic(Net)/AXC.vb


' Setting lower limit value of trigger output range of counter module.
' Setting lower limit value of range to generate trigger output with position period.(In the case of position period trigger product)
' Setting standard position application of trigger information of start address of ram.(In the case of absolute location product)
' Unit : Set by 'AxcMotSetMoveUnitPerPulse'.
' Note : Lower limit value should be set smaller than upper limit value.
Public Declare Function AxcTriggerSetBlockLowerPos Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dLowerPosition As Double) As Integer


' Verifying lower limit value of trigger output range of counter module.
Public Declare Function AxcTriggerGetBlockLowerPos Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpLowerPosition As Double) As Integer


' Verifying upper limit value of trigger output range of counter module.
' Setting upper limit value of range to generate trigger output with position period.(In the case of position period trigger product).
' In the case of the product of absolute position trigger, used as location where trigger information is applied of last address of RAM(Trigger information was set).
' Unit : Setting from 'AxcMotSetMoveUnitPerPulse'
' Note : Upper limit value should be set bigger than lower limit value.
Public Declare Function AxcTriggerSetBlockUpperPos Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dUpperPosition As Double) As Integer
' Setting lower limit value of trigger output range of counter module.
Public Declare Function AxcTriggerGetBlockUpperPos Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpUpperrPosition As Double) As Integer


' Setting position period used for position peroid mode trigger of counter module.
' Unit : Sets from 'AxcMotSetMoveUnitPerPulse'.
Public Declare Function AxcTriggerSetPosPeriod Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dPeriod As Double) As Integer


' Verifying position period used for position peroid mode trigger of counter module.
Public Declare Function AxcTriggerGetPosPeriod Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpPeriod As Double) As Integer


' Setting a valid function about position increase/decrease when using trigger of position period mode of counter module.
' dwDirection -->  0x00 : Output every trigger period.(About counter increase/decrease)
' dwDirection -->  0x01 : Output every trigger period.(About counter increase)
' dwDirection -->  0x01 : Output every trigger period.(About counter decrease)
Public Declare Function AxcTriggerSetDirectionCheck Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwDirection As Integer) As Integer
' Verifying setting value of 'AxcTriggerSetDirectionCheck'.
Public Declare Function AxcTriggerGetDirectionCheck Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpDirection As Integer) As Integer


' Setting position period and range at once.(About trigger function of position period mode)
'Positioning unit : Set by 'AxcMotSetMoveUnitPerPulse'.
Public Declare Function AxcTriggerSetBlock Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dLower As Double, ByVal dUpper As Double, ByVal dABSod As Double) As Integer


' Verifying setting value of 'AxcTriggerSetBlock'.
Public Declare Function AxcTriggerGetBlock Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpLower As Double, ByRef dpUpper As Double, ByRef dpABSod As Double) As Integer


' Setting pulse width of trigger output of counter module.
' Unit : uSec
Public Declare Function AxcTriggerSetTime Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dTrigTime As Double) As Integer


' Verifying setting value of 'AxcTriggerSetTime'.
Public Declare Function AxcTriggerGetTime Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dpTrigTime As Double) As Integer


' Setting output level of trigger output pulse of counter module.
' dwLevel -->  0x00 : Low level output.(When trigger is output)
' dwLevel -->  0x01 : High level output.(When trigger is output)
Public Declare Function AxcTriggerSetLevel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwLevel As Integer) As Integer
' Verifying setting value of 'AxcTriggerSetLevel'.
Public Declare Function AxcTriggerGetLevel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpLevel As Integer) As Integer


' Setting frequency for Frequency trigger output function of counter module.
' Unit : Hz, Range : 1Hz ~ 500 kHz
Public Declare Function AxcTriggerSetFreq Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwFreqency As Integer) As Integer
' Verifying setting value of 'AxcTriggerSetFreq'.
Public Declare Function AxcTriggerGetFreq Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpFreqency As Integer) As Integer


    Public Declare Function AxcTriggerGetTriggerOutCount Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpTriggerOutCount As Integer) As Integer
    Public Declare Function AxcTriggerSetTriggerOutCount Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwTriggerOutCount As Integer) As Integer



' Setting the value of universal output about appoint channel of counter module.
' dwOutput range : 0x00 ~ 0x0F, Four universal outputs for each channel.
Public Declare Function AxcSignalWriteOutput Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwOutput As Integer) As Integer


' Verifying the value of universal output about appoint channel of counter module.
Public Declare Function AxcSignalReadOutput Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpOutput As Integer) As Integer


' Setting the value by bit of universal output about appoint channel of counter module.
' lBitNo range : 0 ~ 3, Four universal outputs for each channel.
Public Declare Function AxcSignalWriteOutputBit Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal lBitNo As Integer, ByVal uOnOff As Integer) As Integer
' Verifying the value by bit of universal output about appoint channel of counter module.
' lBitNo range : 0 ~ 3
Public Declare Function AxcSignalReadOutputBit Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal lBitNo As Integer, ByRef upOnOff As Integer) As Integer


' Check the general-purpose input value for the designated channel of the counter module.
Public Declare Function AxcSignalReadInput Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpInput As Integer) As Integer


' Verifying the value by bit of universal input about appoint channel of counter module.
' lBitNo range : 0 ~ 3
Public Declare Function AxcSignalReadInputBit Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal lBitNo As Integer, ByRef upOnOff As Integer) As Integer


' Activating trigger output of counter module.
' Sets whether the trigger output will be finally output according to the currently set function.
Public Declare Function AxcTriggerSetEnable Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwUsage As Integer) As Integer


' Verifying setting value of 'AxcTriggerSetEnable'.
Public Declare Function AxcTriggerGetEnable Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef dwpUsage As Integer) As Integer


' Verifying RAM contents for absolute trigger function of counter module.
' dwAddr range : 0x0000 ~ 0x1FFFF;
Public Declare Function AxcTriggerReadAbsRamData Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwAddr As Integer, ByRef dwpData As Integer) As Integer


' Setting RAM contents for absolute trigger function of counter module.
' dwAddr range : 0x0000 ~ 0x1FFFF;
Public Declare Function AxcTriggerWriteAbsRamData Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwAddr As Integer, ByVal dwData As Integer) As Integer


' Setting RAM contents at once for absolute trigger function of counter module.
' dwTrigNum range : ~ 0x20000  In the case of *RTEX CNT2  0x200*
' dwDirection --> 0x0 : Input trigger information first about lower limit trigger position. Used for trigger output(In direction of increasing position).
' dwDirection --> 0x1 : Input trigger information first about upper limit trigger position. Used for trigger output(In direction of decreasing position).
Public Declare Function AxcTriggerSetAbs Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwTrigNum As Integer, ByRef dwTrigPos As Integer, ByVal dwDirection As Integer) As Integer


' Set the contents of the RAM required for the absolute position trigger function of the counter module at once.
' dwTrigNum range : 0 ~ 0x20000 (RTEX CNT2 : 0 ~ 0x200)
' dwDirection     : (0) Enter the trigger information for the lower limit trigger position. Used for trigger output in the direction of increasing position.
'                   (1) Enter the trigger information for the upper limit trigger position. Used for trigger output in the direction of decreasing position.
' dTrigPos        : Use trigger position of counter module as double type
Public Declare Function AxcTriggerSetAbsDouble Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal dwTrigNum As Integer, ByRef dTrigPos As Double, ByVal dwDirection As Integer) As Integer

    Public Declare Function AxcTriggerSetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal dwEncoderInput1 As Integer, ByVal dwEncoderInput2 As Integer) As Integer
    Public Declare Function AxcTriggerGetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef dwpEncoderInput1 As Integer, ByRef dwpEncoderInput2 As Integer) As Integer

    Public Declare Function AxcTableSetTriggerLevel Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal uLevel As Integer) As Integer
    Public Declare Function AxcTableGetTriggerLevel Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef upLevel As Integer) As Integer

    Public Declare Function AxcTableSetTriggerTime Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal dTriggerTimeUSec As Double) As Integer
    Public Declare Function AxcTableGetTriggerTime Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef dpTriggerTimeUSec As Double) As Integer

    Public Declare Function AxcTableSetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal uEncoderInput1 As Integer, ByVal uEncoderInput2 As Integer) As Integer
    Public Declare Function AxcTableGetEncoderInput Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef upEncoderInput1 As Integer, ByRef upEncoderInput2 As Integer) As Integer


    Public Declare Function AxcTableSetTriggerOutport Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal uTriggerOutport As Integer) As Integer
    Public Declare Function AxcTableGetTriggerOutport Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef upTriggerOutport As Integer) As Integer

    Public Declare Function AxcTableSetErrorRange Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal dErrorRange As Double) As Integer
    Public Declare Function AxcTableGetErrorRange Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef dpErrorRange As Double) As Integer

    Public Declare Function AxcTableTriggerOneShot Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer) As Integer

    Public Declare Function AxcTableTriggerPatternShot Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal lTriggerCount As Integer, ByVal uTriggerFrequency As Integer) As Integer
    Public Declare Function AxcTableGetPatternShotData Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef lpTriggerCount As Integer, ByRef upTriggerFrequency As Integer) As Integer

    Public Declare Function AxcTableSetTriggerMode Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByVal uTrigMode As Integer) As Integer
    Public Declare Function AxcTableGetTriggerMode Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer, ByRef upTrigMode As Integer) As Integer
    Public Declare Function AxcTableSetTriggerCountClear Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lTablePos As Integer) As Integer
